# efc

./: README.md  flake.nix  main.py  setup.cfg  shell.nix
EpiFunctionChecker/: main.py
