[metadata]
name = EpiFunctionChecker
version = 0.1.0
author = dawoox
description = Check if a binary contains a banned function
platform = unix, linux

[options]
include_package_data = True
packages =
    EpiFunctionChecker
python_requires = >=3.10
package_dir =
    = .
zip_safe = no

[options.entry_points]
console_scripts =
    EpiFunctionChecker = EpiFunctionChecker.main:main
